# markov_chains

./: README.md  markov.py  pyproject.toml  test_markov.py
markov_chains/: common.py  markov.py  table_renderers.py  test_markov.py
texts/: anonymous-luftpirat-1.txt  shakespeare-hamlet.txt
